# xotpad

./: Cargo.toml  README.md
.github/workflows/: build.yml
fuzz/: Cargo.toml
libxotpad/: Cargo.toml
libxotpad/src/: lib.rs  pad.rs  x121.rs  x29.rs  x3.rs
libxotpad/src/x25/: packet.rs  vc.rs
libxotpad/src/x29/: pad.rs
src/: host_pad.rs  lib.rs  main.rs  user_pad.rs  util.rs  x3.rs
src/x28/: command.rs  mod.rs  selection.rs  signal.rs
