[package]
name = "xotpad"
version = "0.0.0"
edition = "2021"

[features]
default = ["x25_org"]
x25_org = []

[workspace]

[dependencies]
bytes = "1.6.0"
chrono = "0.4.38"
clap = { version = "4.5.4", default-features = false, features = ["std", "derive", "usage", "help", "error-context"] }
crossterm = "0.27.0"
tracing-mutex = "0.3.0"

libxotpad = { path = "libxotpad" }
